# kdevelop

./: .gitignore  build_breeze_icons_systemqt.bat  build_kcolorscheme_systemqt.bat  build_kiconthemes_systemqt.bat  build_ktexteditor_systemqt.bat  build_kxmlgui_systemqt.bat  build_sonnet_systemqt.bat  build_syntax_highlighting_systemqt.bat  ifft_kdevelop_ck803_debug_guide.md  native-msvc-systemqt-build.md  official-windows-packaging-practical.md  official-windows-packaging-research.md  prune_breeze_symbolic_duplicates.ps1  resolve_breeze_icons_duplicates.ps1  run-kdevelop-clean-ifft.bat  run-kdevelop-ifft-project.bat  run-kdevelop-ifft-workspace.bat  run-kdevelop-native-install.bat  run-kdevelop-native-msvc-systemqt.bat  sync_systemqt_kf6_to_native_install.bat
app/: main.cpp
app_templates/: CMakeLists.txt
kdevplatform/project/: projectmodel.cpp
kdevplatform/shell/: core.cpp  debugcontroller.cpp  mainwindow.cpp  mainwindow.h  project.cpp  projectcontroller.cpp  runcontroller.cpp  uicontroller.cpp
kdevplatform/sublime/: area.cpp  container.cpp  idealbuttonbarwidget.cpp  idealtoolbutton.cpp
local_ck803_ifft_integration/: __rt_entry.S.template  ifft.kdev4  kdeveloprc_external_scripts.ini
packaging/windows/: README.md  kdevelop-installer.nsi  kdevelop-launcher.cpp  package-native-msvc-systemqt.ps1
pics/misc/: misc.kdev4
plugins/: CMakeLists.txt
plugins/appwizard/: appwizardplugin.cpp
plugins/serialmonitor/: CMakeLists.txt  kdevserialmonitor.json  serialmonitorplugin.cpp
plugins/thucompiler/: CMakeLists.txt  kdevthucompiler.json  thucompilerplugin.cpp
(+66 files in other folders)
